--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta property="og:title" content="🧌 j2sh's site ᶜˡᶦᶜᵏ ᵗᵒ ᵒᵖᵉⁿ ᵖᵒʳᵗᶠᵒˡᶦᵒ">
   <meta property="og:description" content="chronically on roblox, also Dogg is sus">
   <meta property="og:url" content="./">
-  <meta property="og:image" content="https://cdn.discordapp.com/attachments/450446056686223361/1090869693369307157/jenna-ortega-wednesday.gif">
+  <meta property="og:image" content="https://pbb.bio/81777">
   <meta itemprop="name" content="j2sh">
   <meta itemprop="description" content="mewhub - it is us twerk">
 
