--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           <iframe height="300px" width="420px" scrolling="no" src="https://lanyard.cnrad.dev/api/277674827215536129?borderRadius=5px&amp;idleMessage=I%20Love%20Latinas&amp;bg=a&amp;animated=true;" frameborder="0">
           </iframe>
 <p align="center">
-<a href="https://www.roblox.com/users/81777/profile"><img src="https://pbb.bio/profile/81777" alt=":bigbootylatinas" />
+<a href="https://www.roblox.com/users/81777/profile"><img src="https://pbb.bio/81777" alt=":bigbootylatinas" />
 </p>
           <div class="socials">
             <a href="https://steamcommunity.com/id/j2sh/">
