--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       var app = new _app();
     </script>
     <div class="startthing">
-      <i><a class="next">> [ Click Me, Beauty ] <</a></i>
+      <i><a class="next">> [ Click ] <</a></i>
     </div>
     <div class="background">
       <div id="pattern"></div>
@@ -95,7 +95,7 @@
             <ul class="navbar-nav mx-auto">
               <li class="nav-item"><a class="nav-link active" href="https://j2sh.co">Home</a></li>
               <li class="nav-item"><a class="nav-link" href="https://github.com/bigbootylatinas"> OG Users</a></li>
-              <li class="nav-item"><a class="nav-link" href="http://mewhub.shop/">Mewhub</a></li>
+              <li class="nav-item"><a class="nav-link" href="http://mewhub.shop/">f8.lol</a></li>
             </ul>
           </div>
         </div>
@@ -109,9 +109,7 @@
           </div>
           <iframe height="300px" width="420px" scrolling="no" src="https://lanyard.cnrad.dev/api/277674827215536129?borderRadius=5px&amp;idleMessage=I%20Love%20Latinas&amp;bg=a&amp;animated=true;" frameborder="0">
           </iframe>
-<p align="center">
-<a href="https://www.roblox.com/users/81777/profile"><img src="https://pbb.bio/81777" alt=":bigbootylatinas" />
-</p>
+
           <div class="socials">
             <a href="https://steamcommunity.com/id/j2sh/">
               <i class="fa-brands fa-steam  social-item" , style="color:#0b82b3;"></i>
