--- a/index.html
+++ b/index.html
@@ -3,16 +3,7 @@
     
   <title>j2sh</title>
   <meta charset="UTF-8">
-  <meta name="description" content="god I love latinas">
-  <meta name="keywords" content="mewhub, mewhub, team">
-  <meta name="author" content="j2sh">
-  <meta property="og:type" content="site">
-  <meta property="og:title" content="🧌 j2sh's site ᶜˡᶦᶜᵏ ᵗᵒ ᵒᵖᵉⁿ ᵖᵒʳᵗᶠᵒˡᶦᵒ">
-  <meta property="og:description" content="chronically on roblox, also Dogg is sus">
-  <meta property="og:url" content="./">
-  <meta property="og:image" img src='https://pbb.bio/81777'>
-  <meta itemprop="name" content="j2sh">
-  <meta itemprop="description" content="mewhub - it is us twerk">
+ 
 
 	<meta name="twitter:card" content="summary_large_image">
 	<link rel="icon" href="https://cdn.discordapp.com/emojis/958384216880590850.webp?size=96&amp;quality=lossless" type="image/icon type">
@@ -81,8 +72,8 @@
           <div class="collapse navbar-collapse" id="navcol-1">
             <ul class="navbar-nav mx-auto">
               <li class="nav-item"><a class="nav-link active" href="https://j2sh.co">Home</a></li>
-              <li class="nav-item"><a class="nav-link" href="https://github.com/bigbootylatinas"> OG Users</a></li>
-              <li class="nav-item"><a class="nav-link" href="http://mewhub.shop/">f8.lol</a></li>
+              <li class="nav-item"><a class="nav-link" href="https://github.com/bigbootylatinas">Github</a></li>
+              <li class="nav-item"><a class="nav-link" href="http://f8.lol">f8.lol</a></li>
             </ul>
           </div>
         </div>
@@ -94,7 +85,7 @@
             <h1 class="Paragraph Hello" id="testamonguspoop"> j2sh </h1>
             <p class="a"><span id="Bruh" class="Paragraph"></span></p>
           </div>
-          <iframe height="300px" width="420px" scrolling="no" src="https://lanyard.cnrad.dev/api/277674827215536129?borderRadius=5px&amp;idleMessage=I%20Love%20Latinas&amp;bg=a&amp;animated=true;" frameborder="0">
+          <iframe height="300px" width="420px" scrolling="no" src="https://lanyard.cnrad.dev/api/277674827215536129?borderRadius=5px&amp;idleMessage=not%20doing%20anything&amp;bg=a&amp;animated=true;" frameborder="0">
           </iframe>
 
           <div class="socials">
