--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <a href="https://steamcommunity.com/id/j2sh/">
               <i class="fa-brands fa-steam  social-item" , style="color:#0b82b3;"></i>
             </a>
-            <a href="https://discord.gg/mewhub">
+            <a href="https://f8.lol/@">
               <i class="fa-brands fa-discord social-item" , style="color:#5865f2;"></i>
             </a>
             <a href="telegram goes here">
