--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta property="og:description" content="chauffeu.rs redirect test">
 		<meta property="og:image" content="https://cdn.discordapp.com/attachments/1059347692330946602/1111468145056694332/854707062788194334.gif">
 		<meta name="twitter:card" content="summary_large_image">
-    <meta http-equiv="refresh" content="0; URL=https://instagram.com/chauffeurs">
+    <meta http-equiv="refresh" content="0; URL=https://link.me/chauffeurs">
 </head>
 <body>
 </body>
